# community_remote

./: .gitignore  LICENSE  README.md  build-android.sh  bundle-linux-aarch64.sh  bundle-linux-x86_64.sh  bundle-linux.sh  bundle-windows-x86_64.cmd  index.md  pubspec.yaml
.github/: FUNDING.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/community_remote/: MainActivity.kt
android/app/src/main/kotlin/com/theappgineer/community_remote/: MainActivity.kt
flatpak/: .gitignore  com.theappgineer.community_remote.desktop  com.theappgineer.community_remote.metainfo.xml  com.theappgineer.community_remote.yml
flatpak/icons/: com.theappgineer.community_remote.xcf
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/frontend/: app_state.dart  browse.dart  full_screen_dialog.dart  grouping.dart  home_page.dart  mini_now_playing.dart  mini_now_playing_dialog.dart  now_playing.dart  now_playing_dialog.dart  queue.dart  volume.dart  zones.dart
lib/src/rust/: .gitignore  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: roon_browse_mirror.dart  roon_browse_wrapper.dart  roon_transport_mirror.dart  roon_transport_wrapper.dart  simple.dart  simple.freezed.dart
lib/src/rust/backend/: roon.dart  roon.freezed.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: .gitignore  frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs
rust/src/api/: mod.rs  roon_browse_mirror.rs  roon_browse_wrapper.rs  roon_transport_mirror.rs  roon_transport_wrapper.rs  simple.rs
rust/src/backend/: browse_helper.rs  mediawiki.rs  mod.rs  roon.rs  roon_access.rs  roon_handler.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt  community_remote.iss
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
