[package]
name = "rust_lib"
version = "0.0.1"
authors = ["The Appgineer"]
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
chrono = { version = "0.4", features = ["clock"], default-features = false }
flutter_rust_bridge = "=2.0.0-dev.34"
log = "0.4"
once_cell = "1.19"
rand = "0.8.5"
roon-api = { git = "https://github.com/TheAppgineer/rust-roon-api.git", rev = "b035a44", features = ["browse", "image", "transport"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
time = "0.3"
tokio = { version = "1.24.1", features = ["macros"] }
