[package]
name = "rust_lib"
version = "0.0.4"
authors = ["The Appgineer"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/theappgineer/community_remote"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4", features = ["clock"], default-features = false }
flutter_rust_bridge = "=2.0.0"
log = "0.4"
once_cell = "1.19"
rand = "0.8.5"
roon-api = { git = "https://github.com/TheAppgineer/rust-roon-api.git", tag = "0.2.1", features = ["browse", "image", "transport"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
time = "0.3"
tokio = { version = "1.24.1", features = ["macros"] }
