[package]
name = "rust_lib"
version = "0.1.0"
authors = ["The Appgineer"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/theappgineer/community_remote"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0"
any_ascii = "0.3"
chrono = { version = "0.4", features = ["clock"], default-features = false }
flutter_rust_bridge = "=2.6.0"
log = "0.4"
mediawiki = "0.3"
once_cell = "1.20"
rand = "0.8.5"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"]}
roon-api = { git = "https://github.com/TheAppgineer/rust-roon-api.git", tag = "0.3.1", features = ["browse", "image", "transport", "settings", "status"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
time = "0.3"
tokio = { version = "1.41", features = ["macros"] }
typetag = "0.2"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
